--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^3.6.5",
     "next": "^10.1.3",
     "next-seo": "^4.23.0",
+    "nprogress": "^0.2.0",
     "null-loader": "^4.0.1",
     "pinyin-pro": "^3.0.7",
     "react": "^17.0.2",
